discussion/kv_engine/147376/147376_rev16_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46907: Add magma filesystem stats to kvstore timing stats

Magma::GetFileStats mirrors couchstore's file system stats.
Magma::GetHistogramStats returns histograms related to magma
compaction, blocking compactions and flush wait times.

Change-Id: If9d083da40295e158080238c79c7c922c360e6cc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Apaar gupta
Date: 2021-06-16 17:14:51.000000000
Message: 
Uploaded patch set 16.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-16 17:29:55.000000000
Message: 
Patch Set 16: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36952/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.h(664): error C3668: "MagmaKVStore::addTimingStats": method with override specifier "override" did not override any base class methods ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36952/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31570/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:664:67:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31570/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9960/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2557:39: error: cannot initialize a parameter of type "const CookieIface *" with an lvalue of type "const void *" [clang-diagnostic-error]
    KVStore::addTimingStats(add_stat, c);
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore.h:681:52: note: passing argument to parameter "c" here
                                const CookieIface* c);
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:664:67: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
    void addTimingStats(const AddStatFn& add_stat, const void* c) override;
                                                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore.h:680:18: note: hidden overloaded virtual function "KVStore::addTimingStats" declared here: type mismatch at 2nd parameter ("const CookieIface *" vs "const void *")
    virtual void addTimingStats(const AddStatFn& add_stat,
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9960/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2557:39:
error: cannot initialize a parameter of type "const CookieIface *" with an lvalue of type "const void *" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9960/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10605/ : FAILURE

Compile error at [2021-06-16T17:17:27.248Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:664:67:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10605/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11677/ : FAILURE

Compile error at [2021-06-16T17:17:18.386Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:664:10:
error: ?void MagmaKVStore::addTimingStats(const AddStatFn&, const void*)? marked ?override?, but does not override
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11677/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11957/ : FAILURE

Compile error at [2021-06-16T17:16:48.374Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:664:67:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11957/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19541/ : FAILURE

Compile error at [2021-06-16T17:18:14.094Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:664:67:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19541/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8550/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/458/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11525/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
